Add mobile menu styles and minor HTML cleanup
Rename .menuicon to .menumobileicon and adjust related CSS for responsiveness: hide .navlist and .loginbutton on screens <=650px, show .menumobileicon as a 30x30 flex icon, set button display to flex, and add a .menumobile helper class (hidden by default). Also remove an extra blank line in index.html (minor markup cleanup).

--- a/projeto-navbarres/style.css
+++ b/projeto-navbarres/style.css
@@ -40,11 +40,30 @@ header {
     width: 80px;
     border: none;
 }
-.menuicon {
-    mix-blend-mode: multiply;
+.menumobileicon {
+    display: none;
 }
 .menumobileicon button {
+    display: flex;
     background: transparent;
     border: none;
     cursor: pointer;
+}
+.menumobile {
+    display: none;
+}
+
+@media screen and (max-width: 650px) { 
+.navlist {
+    display: none;
+}
+.loginbutton {
+    display: none;
+}
+.menumobileicon {
+    display: flex;
+    width: 30px;
+    height: 30px;
+}
+
 }
